# splicegraphmerge

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  combined_graph.cc  combined_graph.h  combined_group.cc  combined_group.h  combiner.cc  combiner.h  graph_base.cc  graph_set.cc  graph_set.h  incubator.cc  incubator.h  interval_map.cc  interval_map.h  main.cc  phasing_path.cc  phasing_path.h  splice_graph.cc  splice_graph.h
