bin_PROGRAMS = splicegraphmerge

splicegraphmerge_SOURCES = splice_graph.h splice_graph.cc \
						   vertex_info.h vertex_info.cc \
						   edge_info.h edge_info.cc \
						   interval_map.h interval_map.cc \
						   graph_base.cc graph_base.h \
						   directed_graph.cc directed_graph.h \
						   edge_base.cc edge_base.h \
						   undirected_graph.cc undirected_graph.h \
						   vertex_base.cc vertex_base.h \
						   draw.h draw.cc \
						   graph_set.h graph_set.cc \
						   combiner.h combiner.cc \
						   main.cc
