bin_PROGRAMS = splicegraphmerge

splicegraphmerge_CPPFLAGS = -std=c++11
splicegraphmerge_LDFLAGS = -pthread

splicegraphmerge_SOURCES = splice_graph.h splice_graph.cc \
						   vertex_info.h vertex_info.cc \
						   edge_info.h edge_info.cc \
						   interval_map.h interval_map.cc \
						   graph_base.cc graph_base.h \
						   directed_graph.cc directed_graph.h \
						   edge_base.cc edge_base.h \
						   undirected_graph.cc undirected_graph.h \
						   vertex_base.cc vertex_base.h \
						   draw.h draw.cc \
						   combined_graph.h combined_graph.cc \
						   incubator.h incubator.cc \
						   phasing_path.h phasing_path.cc \
						   combined_group.h combined_group.cc \
						   main.cc
